# pyk8sdemo-app

./: Dockerfile  README.md  setup.cfg
argocd/application-manifests/: demo1_application.yaml
argocd/deployment-manifests/: troubleshooting-app.yaml
kubernetes_manifests/: troubleshooting-app-pod-only.yaml  troubleshooting-app.yaml
kubernetes_manifests/kustomization-demo/base/: flask-demo-app-deployment.yaml  flask-demo-app-service.yaml  kustomization.yaml
kubernetes_manifests/kustomization-demo/overlays/pod-only/: delete-flask-demo-app-service.yaml  kustomization.yaml
src/flask-demo-app/: flask-demo-app.py
src/flask_demo_app/: __init__.py  flask_demo_app.py
test/locust/: basic_home_page_test.py  basic_hunger_test.py
