[metadata]
name = flask-demo-app
version = 0.0.1
author = Nico Coetzee
author_email = nicc777@gmail.com
description = A simple demo app in flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicc777/pyk8sdemo-app
project_urls =
    Bug Tracker = https://github.com/nicc777/pyk8sdemo-app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
